[package]
name = "bit-vec"
version = "0.8.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A vector of bits"
repository = "https://github.com/contain-rs/bit-vec"
homepage = "https://github.com/contain-rs/bit-vec"
documentation = "https://docs.rs/bit-vec/"
keywords = ["data-structures", "bitvec", "bitmask", "bitmap", "bit"]
readme = "README.md"
edition = "2021"
rust-version = "1.82"

[dependencies]
borsh = { version = "1.5.7", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
miniserde = { version = "0.1", optional = true }
nanoserde = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1.0"
rand = "0.9"
rand_xorshift = "0.4"

[features]
default = ["std"]
serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
borsh_std = ["borsh/std"]
std = []

[package.metadata.docs.rs]
features = ["borsh", "serde", "miniserde", "nanoserde"]
