[workspace]

members = [
    "vec",
    "set",
    "matrix",
]

exclude = [
    "fuzz",
]

resolver = "2"

# add debug info for profiling?
[profile.release]
debug = false

[workspace.dependencies]

[workspace.package]
# shared version of all public crates in the workspace
version = "0.10.0"
rust-version = "1.82.0"
