[package]
name = "bit-matrix"
version = "0.9.0"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for bit matrices and vectors."
keywords = ["container", "bit", "bitfield", "algebra"]
documentation = "https://docs.rs/bit-matrix/latest/bit_matrix/"
repository = "https://github.com/pczarn/bit-matrix"
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "bit_matrix"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
miniserde = { version = "0.1", optional = true }
bit-vec = { version = "0.8", default-features = false }

[dev-dependencies]
serde_json = "1.0"


[features]
default = ["std"]
std = ["bit-vec/std"]

serde = ["dep:serde", "bit-vec/serde"]
serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
miniserde = ["dep:miniserde", "bit-vec/miniserde"]
