[package]
name = "bit-vec"
version.workspace = true
rust-version.workspace = true
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A vector of bits"
repository = "https://github.com/contain-rs/bit-vec"
homepage = "https://github.com/contain-rs/bit-vec"
documentation = "https://docs.rs/bit-vec/"
keywords = ["data-structures", "bitvec", "bitmask", "bitmap", "bit"]
readme = "README.md"
edition = "2021"

[dependencies]
borsh = { version = "1.6.0", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
miniserde = { version = "0.1", optional = true }
nanoserde = { version = "0.1", optional = true }
smallvec = { version = "1.15", optional = true }

[dev-dependencies]
serde_json = "1.0"
rand = "0.10"
rand_xorshift = "0.5"
generic-tests = "0.1"

[features]
default = ["std"]
std = ["serde?/std", "borsh?/std"]
allocator_api = []

[package.metadata.docs.rs]
features = ["borsh", "serde", "miniserde", "nanoserde"]
